# AoC2020

./: .gitignore  Cargo.toml
01_report_repair/: Cargo.toml
01_report_repair/src/: main.rs
02_password_philosophy/: Cargo.toml
02_password_philosophy/src/: main.rs  password.rs  puzzle.ron
03_toboggan_trajectory/: Cargo.toml  puzzle_input.ron
03_toboggan_trajectory/src/: main.rs  map.rs
04_passport_processing/: Cargo.toml
04_passport_processing/src/: data.rs  main.rs
05_binary_boarding/: Cargo.toml
05_binary_boarding/src/: boarding_pass.rs  main.rs
06_custom_customs/: Cargo.toml  input.txt
06_custom_customs/src/: customs.rs  main.rs
08_handheld_gaming/: Cargo.toml  input.txt
08_handheld_gaming/src/: main.rs  program.rs
