[package]
name = "passport_processing"
version = "0.1.0"
authors = ["Vilém Pavlíček <pavlicek@cngroup.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#raster can parse color in hexadecimal format
raster = "0.2.0"